kubernetes/production/apps/observability/alloy/app/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alloy
  annotations:
    kubernetes.io/ingress.class: traefik-external
    external-dns.alpha.kubernetes.io/target: traefik.${SECRET_CLUSTER_LOCAL_DOMAIN}
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`alloy.${SECRET_CLUSTER_LOCAL_DOMAIN}`)
      kind: Rule
      services:
        - name: alloy
          port: 12345
  tls:
    secretName: observability-certificate-secret-production
